remoção de js / adição de páginas

--- a/index.html
+++ b/index.html
@@ -10,26 +10,13 @@
 </head>
 
 <body>
-  <div id="introduction">
-    <p id="intro1"></p>
+  <div class="introduction">
+    <p>olá, seja bem vindo, usuário n2090873.</p>
     <br>
-    <p id="intro2"></p>
-    <p id="intro3"></p>
-    <br>
-    <p class="invisible" id="intro-input-p">r:</p>
-    <input class="invisible" type="number" name="intro-input" id="intro-input">
-  </div>
-
-  <div id="description">
-    <p id="des1"></p>
-    <p id="des2"></p>
-    <p id="des3"></p>
+    <p>esta é uma página sobre ███████.</p>
+    <p>se quiser saber mais sobre ███████, clique <a href="./sobre">aqui</a></p>
     <br>
   </div>
-
-  <div id="options">
-  </div>
-
   <script src="script.js"></script>
 </body>
 
